k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service # Name of the Kubernetes Service for MongoDB
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb # Selects pods with the label app: mongodb
  ports:
    - protocol: TCP
      port: 27017 # Port the service listens on
      targetPort: 27017 # Port the MongoDB container listens on
  clusterIP: None # headless service for statefulset, or just ClusterIP for deployment
